# MusicPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  android-build.sh  main.cpp  mainwindow.cpp  mainwindow.h  qml.qrc
Core/: CMakeLists.txt
Core/Private/Framework/: AppInstance.cpp
Core/Private/Libs/: AppInstanceLibs.cpp
Core/Private/Subsystems/: ytSearcherSub.cpp
Core/Private/Subsystems/Player/: PlayerSubsystem.cpp  song.cpp
Core/Private/Subsystems/Player/PlayerBackend/: playerbase.cpp  playerbase.h
Core/Public/Framework/: AppInstance.h
Core/Public/Subsystems/: ytSearcherSub.h
Core/Public/Subsystems/Player/: PlayerSubsystem.h  song.h
Source/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Source/Core/: CMakeLists.txt
Source/Core/Private/Framework/: AppInstance.cpp  SubsystemBase.cpp
Source/Core/Private/Subsystems/: ytSearcher.cpp
Source/Core/Private/Subsystems/Player/: PlayerSubsystem.cpp  song.cpp
Source/Core/Private/Subsystems/Player/PlayerBackend/: PlayerBackend.cpp
Source/Core/Public/Framework/: AppInstance.h  SubsystemBase.h
Source/Core/Public/Subsystems/Player/: MultimediaBackend.cpp  MultimediaBackend.h  PlayerBackend.h  PlayerSubsystem.h  androidjavaplayer.cpp  androidjavaplayer.h
Source/Core/Public/Subsystems/Player/SubObjects/: playlist.cpp  playlist.h  song.h
Source/Private/Framework/: AppInstance.cpp
Source/Private/Libs/: AppInstanceLibs.cpp
Source/Private/Subsystems/: PlayerSubsystem.cpp  ytSearcherSub.cpp
Source/Private/Subsystems/Player/: PlayerSubsystem.cpp  song.cpp
Source/Private/Widgets/Components/: foundedSongButton.cpp  musicbutton.cpp
Source/Public/Data/: songPath.h
Source/Public/Framework/: AppInstance.cpp  AppInstance.h
Source/Public/Libs/: AppInstanceLibs.cpp  AppInstanceLibs.h
Source/Public/Subsystems/: PlayerSubsystem.h  eventHandler.cpp  eventHandler.h  ytSearcherSub.h
Source/Public/Subsystems/Player/: PlayerSubsystem.h  song.h
Source/Public/Widgets/Components/: musicbutton.h
Source/Public/Widgets/Playlist/: playlistitem.h  playlistitem.ui
Source/UI/Android/: androidmainwindow.cpp
Source/UI/Android/CurrentPlayingSong/: currentplayingsong.cpp
Source/UI/Android/MediaLib/: medialibitemwidget.h  playlistsong.cpp  playlistsong.h  playlistsong.ui
Source/UI/Android/PermissionsHandler/: permissionHandler.cpp
Source/UI/Android/Subsystems/: androidjavaplayer.cpp  androidjavaplayer.h
Source/UI/Android/Widgets/: PlaylistWidget.qml  SongWidget.qml  androidMainWindow.qml  testAllSongsPage.qml
Source/UI/Windows/: CMakeLists.txt
Source/UI/Windows/MainWindow/: mainwindow.cpp  mainwindow.h
Source/UI/Windows/MainWindow/Components/: titlebar.cpp  titlebar.h  titlebar.ui
Source/UI/Windows/MediaLib/: addtoplaylist.cpp  medialibitem.cpp
Source/UI/Windows/OldWidgets/Components/: musicbutton.h
Source/UI/Windows/OldWidgets/Playlist/: playlistitem.cpp  playlistitem.h
Source/Widgets/: titlebar.ui
Source/Widgets/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Source/Widgets/MainWindow/Components/: titlebar.cpp  titlebar.ui
Source/Widgets/MediaLib/: medialibitem.cpp  medialibitem.h  medialibitem.ui  playlistlist.cpp  playlistlist.h  playlistlist.ui
Source/Widgets/OldWidgets/Components/: foundedSongButton.h  musicbutton.h
Source/Widgets/OldWidgets/Playlist/: playlistitem.cpp  playlistitem.h  playlistitem.ui
android/: AndroidManifest.xml  build.gradle  local.properties
android/res/drawable/: ic_play.xml  ic_skip_previous.xml  ic_stop.xml
android/res/layout/: notification_music_player.xml
android/res/values/: strings.xml
android/src/: TestReceiver.java
android/src/com/example/MusicPlayer/: JavaMusicPlayer.java  MainActivity.java  MediaButtonReceiver.java  MediaSessionHandler.java  MusicPlayerService.java  NativeAudioPlayer.java
